# agentic_task

./: AGENTIC_PROMPT_GUIDELINES.md  README.md  TASK.md  pyproject.toml  requirements.txt
benchmark/: __init__.py  agent_colab.ipynb  benchmark_prompt.md  config.py  golden_solution.ipynb
benchmark/data/: generate.py  loader.py
benchmark/dataset/: author_affiliations.json  citations.csv  generate_dataset.py  ground_truth.json  papers_metadata.json
benchmark/evaluation/: __init__.py  agent.py  comparison.py  prompt.py  tests.py
benchmark/pipeline/: __init__.py  citations.py  extraction.py  report.py  resolution.py  runner.py  validation.py
